# BGP-simulation

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-build-clion  Dockerfile-docs  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: c-cpp.yml  iwyu.yml  read-the-docs.yml  valgrind.yml
docker/compiler/: Dockerfile
docker/compiler_clion/: Dockerfile
docker/compiler_vscode/: Dockerfile
docker/docs/: Dockerfile
docs/: Dockerfile-docs  Makefile  compilation.md  compilation.rst  conf.py  getting-started.rst  index.rst
docs/_static/: style.css
docs/compilation/: compile-code.md  compile-documentation.md
docs/getting-started/: compile-code.md  compile-documentation.md  run-the-program.md  test-the-program.md  troubleshoot.md
examples/: config.yaml  config_10R_loop-isolated.yaml  config_3R_loop.yaml  config_3R_tree.yaml  config_4R_loop-isolated.yaml  config_5R_loop-isolated.yaml
src/: .clang-format  BGPConnection.cpp  BGPConnection.h  main.cpp
src/Utils/: Timer.cpp  Timer.h
src/bgp/: ASPath.cpp  ASPath.fwd.h  ASPath.h  BGPApplication.cpp  BGPApplication.fwd.h  BGPApplication.h  BGPConnection.cpp  BGPConnection.fwd.h  BGPConnection.h  BGPDecisionProcess.cpp  BGPDecisionProcess.h  BGPEvent.cpp  BGPEvent.h  BGPTableRow.cpp  BGPTableRow.fwd.h  BGPTableRow.h  BGPTimer.cpp  BGPTimer.fwd.h  BGPTimer.h  Event.cpp  Event.h
src/bgp/fsm/: BGPState.cpp  BGPState.fwd.h  BGPState.h  BGPStateActive.cpp  BGPStateActive.h  BGPStateConnect.cpp  BGPStateConnect.h  BGPStateEnstablished.cpp  BGPStateEnstablished.h  BGPStateEstablished.cpp  BGPStateEstablished.h  BGPStateIdle.cpp  BGPStateIdle.h  BGPStateMachine.cpp  BGPStateMachine.fwd.h  BGPStateMachine.h  BGPStateOpenConfirm.cpp  BGPStateOpenConfirm.h  BGPStateOpenSent.cpp  BGPStateOpenSent.h
src/bgp/packets/: BGPKeepaliveLayer.cpp  BGPKeepaliveLayer.h  BGPLayer.cpp  BGPLayer.h  BGPNotificationLayer.cpp  BGPNotificationLayer.h  BGPOpenLayer.cpp  BGPOpenLayer.h  BGPUpdateLayer.cpp  BGPUpdateLayer.fwd.h  BGPUpdateLayer.h  BGPUpdateLengthAndIpPrefix.cpp  BGPUpdateLengthAndIpPrefix.h  BGPUpdatePathAttribute.cpp  BGPUpdatePathAttribute.h
src/configuration/: parser.cpp  parser.h
src/configuration/parser/: Parser.cpp  Parser.h  ParserClient.cpp  ParserClient.h  ParserLink.cpp  ParserLink.h  ParserNetworkCard.cpp  ParserNetworkCard.h  ParserNetwork_details.cpp  ParserNetwork_details.h  ParserRouter.cpp  ParserRouter.h
src/entities/: Client.h  Connection.h  Device.cpp  Device.fwd.h  Device.h  EndPoint.cpp  EndPoint.h  Link.cpp  Link.fwd.h  Link.h  NetworkCard.cpp  NetworkCard.fwd.h  NetworkCard.h  Network_details.h  Router.cpp  Router.fwd.h  Router.h
src/fsm/: BGPState.h  BGPStateActive.cpp  BGPStateActive.h  BGPStateConnect.cpp  BGPStateConnect.h  BGPStateEnstablished.cpp  BGPStateEnstablished.h  BGPStateIdle.cpp  BGPStateIdle.h  BGPStateMachine.cpp  BGPStateMachine.h  BGPStateOpenConfirm.cpp  BGPStateOpenConfirm.h  BGPStateOpenSent.cpp  BGPStateOpenSent.h  BGPStateOpenconfirm.h  Event.h  State.h  StateMachine.cpp  StateMachine.h
src/hellocpp/: compile.sh  main.cpp  readme.md  resources.cpp
src/hellocpp/ui/: main.htm
src/hellocpp/zoomcharts/: release.txt  revision.txt  zoomcharts.d.ts  zoomcharts.js
src/hellocpp/zoomcharts/assets/: zc.css
src/hellosciter/: main.htm
src/ip/: IpManager.cpp  IpManager.h  RoutingTable.cpp  RoutingTable.fwd.h  RoutingTable.h  TableRow.cpp  TableRow.fwd.h  TableRow.h
src/logger/: Logger.cpp  Logger.h
src/net-visualization/: bgp-visualization.html  prova.html
src/net-visualization/css/: main.css
src/net-visualization/js/: node-events.js
src/server/: Server.cpp  Server.h
src/socket/: Socket.cpp  Socket.fwd.h  Socket.h
src/tcp/: TCPConnection.cpp  TCPConnection.fwd.h  TCPConnection.h  TCPEvent.cpp  TCPEvent.h  TCPFlag.h  TCPTimer.cpp  TCPTimer.fwd.h  TCPTimer.h
src/tcp/fsm/: TCPState.cpp  TCPState.fwd.h  TCPState.h  TCPStateCloseWait.cpp  TCPStateCloseWait.h  TCPStateClosed.cpp  TCPStateClosed.h  TCPStateClosing.cpp  TCPStateClosing.h  TCPStateEnstablished.cpp  TCPStateEnstablished.h  TCPStateEstablished.cpp  TCPStateEstablished.h  TCPStateFINWait1.cpp  TCPStateFINWait1.h  TCPStateFINWait2.cpp  TCPStateFINWait2.h  TCPStateLastACK.cpp  TCPStateLastACK.h  TCPStateListen.cpp  TCPStateListen.h  TCPStateMachine.cpp  TCPStateMachine.fwd.h  TCPStateMachine.h  TCPStateSYNReceived.cpp  TCPStateSYNReceived.h  TCPStateSYNSent.cpp  TCPStateSYNSent.h  TCPStateTimeWait.cpp  TCPStateTimeWait.h
src/utils/: Bits.cpp  Bits.h  Filesystem.h  MacGenerator.cpp  MacGenerator.h  NetUtils.cpp  NetUtils.h  SmartPointerUtils.h  Timer.cpp  Timer.fwd.h  Timer.h
